--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 llama-index = "^0.11.19"
+llama-index-llms-ollama = "^0.3.4"
+llama-index-embeddings-huggingface = "^0.3.1"
 
 [tool.poetry.group.analysis.dependencies]
 jupyter="*"
