--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 llama-index = "^0.11.19"
+ #llama-index-readers-web = "^0.2.4"
 llama-index-llms-ollama = "^0.3.4"
 llama-index-embeddings-huggingface = "^0.3.1"
+pandas = "^2.2.3"
 
 [tool.poetry.group.analysis.dependencies]
 jupyter="*"
