--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,21 @@
 fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
+      - id: check-toml
+        name: "[py -  check] check toml"
       - id: end-of-file-fixer
         name: "[py -  check] validate yaml"
+      - id: no-commit-to-branch
+        name: "[git -  check] no commit to branch"
+        args: [ --branch=main ]
       - id: trailing-whitespace
         name: "[file - format] trim trailing whitespace"
         args: [ --markdown-linebreak-ext=md ]
       - id: check-added-large-files
         name: "[file -  check] large file"
-        args: [ --maxkb=5000 ]
+        args: [ --maxkb=2000 ]
       - id: check-docstring-first
         name: "[py   -  check] docstring first"
         files: /examples
@@ -38,50 +43,44 @@ repos:
         name: "[reqs - format] fix requirements.txt"
       - id: check-yaml
         name: "[yaml -  check] validate yaml"
-#  - repo: https://github.com/pre-commit/mirrors-isort
-#    rev: v5.10.1
-#    hooks:
-#      - id: isort
-#        name: "[py   - format] isort"
-#  - repo: https://github.com/PyCQA/docformatter
-#    rev: v1.4
-#    hooks:
-#      - id: docformatter
-#        name: "[py   - format] docformatter"
-#        args: [ -i, --wrap-summaries, "0" ]
-
-  - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.3.0
-    hooks:
-      - id: pydocstyle
-        name: "[py   - check] pydocstyle"
-        files: ^pyramids/
-
   - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0
+    rev: 7.1.1
     hooks:
       - id: flake8
         additional_dependencies: [Flake8-pyproject]
         name: "[py   - check] flake8"
         exclude: ^(examples/|tests/)
-#         args: [--config=pyproject.toml]    # Explicitly point to pyproject.toml
-
-  #- repo: https://github.com/psf/black
-  #  rev: 22.8.0
-  #  hooks:
-  #    - id: black
-  - repo: https://github.com/ambv/black
-    rev: 24.4.2
+#   - repo: https://github.com/pycqa/docformatter
+#     rev: v1.4
+#     hooks:
+#      - id: docformatter
+#        name: "[py   - format] docformatter"
+#        description: 'Formats docstrings to follow PEP 257.'
+#        entry: docformatter
+#        args: [-i]
+#        language: python
+#        types: [python]
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.3.0
+    hooks:
+      - id: pydocstyle
+        name: "[py   - check] pydocstyle"
+        files: ^src/llama_utils/.*\.py$
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        name: "[py   - format] isort"
+  - repo: https://github.com/psf/black
+    rev: 24.10.0
     hooks:
       - id: black
-        name: "[py   - format] black"
   - repo: https://github.com/lovesegfault/beautysh
     rev: v6.2.1
     hooks:
       - id: beautysh
         name: "[bash - format] beautysh"
 
-  # pre-commit-shell: Checks shell scripts against shellcheck.
   - repo: https://github.com/detailyang/pre-commit-shell
     rev: 1.0.5
     hooks:
@@ -127,4 +126,4 @@ repos:
         name: doctest
         entry: pytest --doctest-modules
         language: system
-        files: src/llama_utils/.py$
+        files: ^src/llama_utils/.*\.py$
