--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,18 @@ pre-commit-commit-msg-hooks = "^0.1.0"
 flake8-pyproject = "^1.2.3"
 pydata-sphinx-theme = "^0.16.0"
 
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.2"
+mkdocs-material = "^9.5"
+mkdocstrings = {extras = ["python"], version = "^0.27.0"}
+pymdown-extensions = "^10.12"
+mkdocs-autorefs = "^1.2"
+mkdocs-macros-plugin = "^1.3.7"
+mkdocs-table-reader-plugin = "^3.1.0"
+mkdocs-jupyter = "^0.25.1"
+mkdocs-mermaid2-plugin = "^1.2.1"
+mike = "^2.1.3"
+
 [tool.isort]
 profile = "black"
 
