--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ theme:
       icon: material/weather-night
       name: Switch to system preference
 
+use_directory_urls: false
 plugins:
   - search
   - mkdocs-jupyter
@@ -61,6 +62,7 @@ plugins:
               show_root_heading: true
               show_signature_annotations: true
               docstring_style: numpy
+  - table-reader
 
 markdown_extensions:
   - admonition
