--- a/.github/workflows/github-pages-mkdocs.yml
+++ b/.github/workflows/github-pages-mkdocs.yml
@@ -76,4 +76,5 @@ jobs:
           PR_NUMBER=${{ github.event.pull_request.number }}
           BRANCH_NAME=pr-${PR_NUMBER}
           #  poetry run mkdocs gh-deploy --remote-branch gh-pages --force --config-file mkdocs.yml --site-dir site/${BRANCH_NAME}
-          poetry run mike deploy --push --force develop
+          poetry run mike deploy develop
+          git push --force origin gh-pages
