--- a/.github/workflows/github-pages-mkdocs.yml
+++ b/.github/workflows/github-pages-mkdocs.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           git config --global user.name '${{ github.actor }}'
           git config --global user.email '${{ github.actor }}@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_DEPLOY_TOKEN }}@github.com/${{ github.repository }}.git
-          PR_NUMBER=${{ github.event.pull_request.number }}
-          BRANCH_NAME=pr-${PR_NUMBER}
+          #git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_DEPLOY_TOKEN }}@github.com/${{ github.repository }}.git
+          #PR_NUMBER=${{ github.event.pull_request.number }}
+          #BRANCH_NAME=pr-${PR_NUMBER}
           poetry run mike deploy --push develop
