replace the HISTORY.rst by change-log.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,7 +92,7 @@ nav:
       - index_manager.md
       - storage.md
       - utils.md
-#   - Change logs: "changelog.md"
+  - Change logs: "change-log.md"
 
 extra:
   version:
