--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ pytest-xdist = "^3.6.1"
 xdoctest = {extras = ["colors"], version = "^1.1.0"}
 typeguard = "^4.3.0"
 
-[tool.poetry.dev-dependencies]
+[poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
 coverage = {extras = ["toml"], version = "^7.6.1"}
 safety = "^3.2.9"
@@ -49,6 +49,18 @@ pre-commit-hooks = "^5.0.0"
 pre-commit-commit-msg-hooks = "^0.1.0"
 flake8-pyproject = "^1.2.3"
 pydata-sphinx-theme = "^0.16.0"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.2"
+mkdocs-material = "^9.5"
+mkdocstrings = {extras = ["python"], version = "^0.27.0"}
+pymdown-extensions = "^10.12"
+mkdocs-autorefs = "^1.2"
+mkdocs-macros-plugin = "^1.3.7"
+mkdocs-table-reader-plugin = "^3.1.0"
+mkdocs-jupyter = "^0.25.1"
+mkdocs-mermaid2-plugin = "^1.2.1"
+mike = "^2.1.3"
 
 [tool.isort]
 profile = "black"
