add ollama docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,8 @@ nav:
       - api/index_manager.md
       - api/storage.md
       - api/utils.md
+  - LLM Tools:
+      - tools/ollama.md
   - Change logs: change-log.md
 
 extra:
