--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -115,11 +115,12 @@ repos:
 
   - repo: local
     hooks:
-      - id: examples-notebook-check
+      - id: nbval
         name: nbval
         entry: pytest --nbval
         language: system
         files: \.ipynb$
+        exclude: ^docs/.*\.ipynb$
 
   - repo: local
     hooks:
