--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,6 @@ flake8-pyproject = "^1.2.3"
 pydata-sphinx-theme = "^0.16.0"
 
 
-
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.2"
 mkdocs-material = "^9.5"
@@ -66,6 +65,8 @@ mkdocs-table-reader-plugin = "^3.1.0"
 mkdocs-jupyter = "^0.25.1"
 mkdocs-mermaid2-plugin = "^1.2.1"
 mike = "^2.1.3"
+jupyter-contrib-nbextensions = "^0.7.0"
+notebook = "<7.0"
 
 [tool.isort]
 profile = "black"
@@ -83,8 +84,7 @@ ignore = ["D401", "D413", "D213", "D203"]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
-norecursedirs = "examples/llms"
-
+norecursedirs = "docs"
 
 [build-system]
 requires = ["poetry-core"]
