Docs/llama-cpp-examples (#16)
* rename the `metadata` to `document_metadata` and `metadata_index` to `node_metadata`

* add instructions to change the `cache_dir`

* add llama-cpp docs

* add docs link to the README.md

* update badges

* update ollama doc images

* add llama-cpp notebook

* fix file ending

* add nbval to test notebooks

* move the notebook examples of llama-cpp to docs

* add notebooks to mkdocs

* update change-log.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,9 @@ nav:
       - api/utils.md
   - LLM Tools:
       - tools/ollama.md
+      - tools/llama-cpp.md
+  - Examples:
+      - tools/notebooks/llama-cpp.ipynb
   - Change logs: change-log.md
 
 extra:
