--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pytest-cov = "^5.0.0"
 pytest-xdist = "^3.6.1"
 xdoctest = {extras = ["colors"], version = "^1.1.0"}
 typeguard = "^4.3.0"
+nbval = "^0.11.0"
 
 [poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
@@ -53,8 +54,6 @@ flake8-pyproject = "^1.2.3"
 pydata-sphinx-theme = "^0.16.0"
 
 
-
-
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.2"
 mkdocs-material = "^9.5"
@@ -66,6 +65,8 @@ mkdocs-table-reader-plugin = "^3.1.0"
 mkdocs-jupyter = "^0.25.1"
 mkdocs-mermaid2-plugin = "^1.2.1"
 mike = "^2.1.3"
+jupyter-contrib-nbextensions = "^0.7.0"
+notebook = "<7.0"
 
 [tool.isort]
 profile = "black"
@@ -83,6 +84,7 @@ ignore = ["D401", "D413", "D213", "D203"]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
+norecursedirs = "docs"
 
 [build-system]
 requires = ["poetry-core"]
