--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ packages = [
 python = "^3.12,<3.13"
 llama-index = "^0.12.12"
 pandas = "^2.2.3"
+pydantic = "^2.10.6"
 
 [tool.poetry.group.parser.dependencies]
 docling = "^2.22.0"
@@ -54,6 +55,7 @@ pre-commit-hooks = "^5.0.0"
 pre-commit-commit-msg-hooks = "^0.1.0"
 flake8-pyproject = "^1.2.3"
 pydata-sphinx-theme = "^0.16.0"
+
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.2"
