Nodes vs Documents, PDF reader (docling) (#20)
* add missing docs for the utils module

* correct module name in utils docs

* extend the `read_documents` to use `TextSplitter` and return nodes

* add more examples to the `read_documents`

* clean commented code

* clean test files at the end of the test

* the `delete_document` method deletes all nodes for a certain document using `document_name` parameter

* abstract the lines that calls the `HuggingFaceLLM` into a `get_huggingface_llm` function

* add docling as a dependency

* add `pdf_reader` module

* add `create_image_document` function

* remove open-cv

* add `parse_pdf_with_docling` function

* add `get_image_docs_from_md` function

* create PDFReader class

* move the SentenceSplitter inside the ConfigLoader

* clean up

* move the SentenceSplitter inside the ConfigLoader

* add pdf_reader mock tests

* add pdf_reader mock tests

* add pydantic

* refactor the pdf_reader to use pydantic

* move the storage related imports from the conftest to the test_storage.py

* reformat the pdf_reader module

* add missing test data

* move the test file out of the pdf extracted figure directory

* rename `FigureData` class into `Image`

* add a documentation file for the pdf_reader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.12,<3.13"
 llama-index = "^0.12.12"
 pandas = "^2.2.3"
+pydantic = "^2.10.6"
+
+[tool.poetry.group.parser.dependencies]
+docling = "^2.22.0"
 
 [tool.poetry.group.analysis.dependencies]
 jupyter="*"
@@ -24,7 +28,6 @@ llama-index-llms-huggingface = "^0.4.2"
 llama-index-llms-ollama = "^0.5.0"
 llama-index-llms-azure-openai = "^0.3.0"
 llama-index-embeddings-azure-openai = "^0.3.0"
-
 
 [tool.poetry.group.testing.dependencies]
 pytest = "^8.3.3"
@@ -85,6 +88,10 @@ ignore = ["D401", "D413", "D213", "D203"]
 [tool.pytest.ini_options]
 testpaths = "tests"
 norecursedirs = "docs"
+markers = [
+    "e2e: marks tests as end-to-end (deselect with '-m \"e2e\"')",
+    "mock: marks tests as mock (deselect with '-m \"mock\"')",
+]
 
 [build-system]
 requires = ["poetry-core"]
