--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: check-docstring-first
         name: "[py   -  check] docstring first"
         files: /examples
-        types : [file, python ]
+        types : [python]
       - id: check-json
         name: "[json -  check] validate json"
       - id: check-merge-conflict
@@ -45,12 +45,13 @@ repos:
         name: "[yaml -  check] validate yaml"
         exclude: '^mkdocs\.yml$'
   - repo: https://github.com/pycqa/flake8
-    rev: 7.1.1
+    rev: 7.1.2
     hooks:
       - id: flake8
         additional_dependencies: [Flake8-pyproject]
         name: "[py   - check] flake8"
         exclude: ^(examples/|tests/)
+
 #   - repo: https://github.com/pycqa/docformatter
 #     rev: v1.4
 #     hooks:
@@ -68,12 +69,12 @@ repos:
         name: "[py   - check] pydocstyle"
         files: ^src/llama_utils/.*\.py$
   - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+    rev: 6.0.1
     hooks:
       - id: isort
         name: "[py   - format] isort"
   - repo: https://github.com/psf/black
-    rev: 24.10.0
+    rev: 25.1.0
     hooks:
       - id: black
   - repo: https://github.com/lovesegfault/beautysh
