--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -33,9 +33,13 @@ jobs:
             poetry --version
             poetry install
 
-      - name: Generate coverage report
+      - name: tests
         run: |
           poetry run pytest -sv --cov=src/llama_utils --cov-report=xml
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
+
+      - name: test Jupyter notebook
+        run: |
+          pytest --nbval -k ".ipynb"
