test notebooks in ci

--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: test Jupyter notebook
         run: |
-          pytest --nbval -k ".ipynb"
+          pytest --nbval -k ".ipynb" --ignore=docs/tools
